mosquitto/mosquitto-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mosquitto-service
spec:
  selector:
    app: mosquitto
  ports:
    - name: port-1883
      protocol: TCP
      port: 1883
      targetPort: 1883
    - name: port-8883
      protocol: TCP
      port: 8883
      targetPort: 8883
