mosquitto/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-red-service
spec:
  ports:
    - name: node-red
      port: 1880
      targetPort: 1880
  selector:
    name: node-red
  type: LoadBalancer
