mosquitto/node-red.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-red
  labels:
    name: node-red
    app: node-red
spec:
  replicas: 1
  selector:
    matchLabels:
      name: node-red
      app: node-red
  template:
    metadata:
      labels:
        app: node-red
        name: node-red
    spec:
      containers:
        - image: nodered/node-red
          name: node-red
          ports:
            - containerPort: 1880
          volumeMounts:
            - name: node-red-data
              mountPath: /data
      volumes:
        - name: node-red-data
          persistentVolumeClaim:
            claimName: node-red-claim

---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: node-red
  name: node-red
spec:
  host: nodered.student480.rahtiapp.fi
  port:
    port: 1880
    targetPort: 1880
  tls:
    termination: passthrough
  to:
    kind: Service
    name: node-red
status:
  ingress: []
